--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.13.3",
     "framer-motion": "^12.34.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.575.0",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
